--- a/config.env
+++ b/config.env
@@ -3,3 +3,4 @@ JWT_SECRET=KellyIsWatching11
 REFRESH_SECRET=AreYouARealSurfer11
 NODE_ENV=development
 PORT=5001
+STORMGLASS_API_KEY=161c05d2-0cd9-11f0-803a-0242ac130003-161c0640-0cd9-11f0-803a-0242ac130003
