--- a/config.env
+++ b/config.env
@@ -4,3 +4,8 @@ REFRESH_SECRET=AreYouARealSurfer11
 NODE_ENV=development
 PORT=5001
 STORMGLASS_API_KEY=161c05d2-0cd9-11f0-803a-0242ac130003-161c0640-0cd9-11f0-803a-0242ac130003
+GEMINI_API_KEY=AIzaSyBEGPIBm81dqMUxKtbq09OvMigV09s8EpU
+
+
+
+
