--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.14.2",
-    "mongoose": "^8.12.1"
+    "mongoose": "^8.12.1",
+    "node-cron": "^4.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
